--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -76,10 +76,10 @@ body {
 }
 #index_photo {
 		max-width: 100%;
-		height: auto;
+		min-height: 300px;
 		width: auto\9; /* ie8 */
-		padding-bottom: 100px;
-		padding-top: 50px;
+		padding-bottom: 7%;
+		padding-top: 5%;
 }
 #index_photo_span {
 		max-width: 100%;
@@ -192,6 +192,7 @@ footer {
     margin: $base-spacing 0;
     .post-title {
         font-size: 25px;
+				color: $accent-color;
     }
     .post-time {
         color: #FF0000;
@@ -251,7 +252,7 @@ footer {
     background: #fff;
 }
 .back-inner:hover {
-    background: #000;
+    background: #FF0000;
 }
 
 /* Paginate
