--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -193,7 +193,7 @@ footer {
     .post-title {
 				font-family: $font-stack-one;
         font-size: 25px;
-				color: $accent-color;
+				color: #000000;
     }
     .post-time {
         color: #FF0000;
