--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,5 +20,5 @@ layout: default
 {% if site.facebook_comments %}
     {% include fb_comments.html %}
 {% endif %}
-
+<script id="dsq-count-scr" src="//https-bolyche-github-io.disqus.com/count.js" async></script>
 {% include disqus.html %}
