--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -1,5 +1,5 @@
 // Font stacks
-$font-stack-one: 'ubuntu';
+$font-stack-one: 'ubuntu', 'Roboto Mono', 'sans-serif';
 $font-stack-three: 'ubuntu';
 $code-font: 'Menlo', 'Roboto Mono', 'Roboto';
 
