--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -191,8 +191,8 @@ footer {
     width: 100%;
     margin: $base-spacing 0;
     .post-title {
-				font-family: $font-stack-one;
-        font-size: 25px;
+				font-family: $font-stack-one, 'sans-serif';
+        font-size: auto;
 				color: #000000;
     }
     .post-time {
