font colour for @media

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -207,7 +207,7 @@ footer {
         .post-title {
             display: block;
             float: none;
-						color: #fff;
+						color: #000;
         }
         margin: $base-spacing*1.1 0;
     }
