added a post on NG2 cells

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -224,6 +224,33 @@ footer {
     float: right;
 }
 
+/* To center images and make them smaller */
+
+.center {
+		text-align: center;
+}
+/*
+previously tried to use something like
+max-width: 80%;
+@extend .center;
+but didn't work
+*/
+.small {
+		padding-left: 15%;
+		padding-right: 15%;
+		text-align: center;
+}
+.smaller {
+		padding-left: 22%;
+		padding-right: 22%;
+		text-align: center;
+}
+.smallest {
+		padding-left: 30%;
+		padding-right: 30%;
+		text-align: center;
+}
+
 /* Navbar
  * * * * * * * * * * * */
 
