layout and posts preview

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,7 +2,7 @@
     <div id="intro">
         <div class="container">
             {% if site.profile_picture %}
-                <img id="intro-img" src="{{site.url}}/images/profilepic.jpg"> <!change profile pic here!>
+                <img id="intro-img" src="{{site.url}}/images/TopPhoto.jpg"> <!change profile pic here!>
             {% endif %}
             <h2>
                 {% if site.site_heading %}
@@ -16,17 +16,7 @@
             </p>
         </div>
         <div class="wrap">
-		        <ul>
-			          <a rel="me" href="https://twitter.com/bolyche" target="_blank" class="button">Twitter</a>
-			          <a rel="me" href="https://github.com/bolyche" target="_blank" class="button">Github</a>
-			          <a rel="me" href="https://flickr.com/photos/bolyche/" target="_blank" class="button">Flickr</a>
-			          <a rel="me" href="https://de.linkedin.com/in/chris-bolychevsky-7783805a" target="_blank" class="button">LinkedIn</a>
-                <a rel="me" href="https://www.facebook.com/deleresk" target="_blank" class="button">Facebook</a>
-                <a rel="me" href="http://steamcommunity.com/profiles/76561198031459610/" target="_blank" class="button">Steam</a>
-                <a rel="me" href="https://www.goodreads.com/user/show/14741184-chris-bolychevsky" target="_blank" class="button">Goodreads</a>
-		        </ul>
-            <br>
-            <br>
+		        <! if you want to insert personal links below title+intro can do so here>
 	      </div>
     </div>
 {% else %}
