--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,17 @@
                         </span>
                     </span>
                 </a>
+                <span class="navbar-links">
+                <ul>
+    			          <a rel="me" href="https://twitter.com/bolyche" target="_blank" class="button">Twitter</a>
+    			          <a rel="me" href="https://github.com/bolyche" target="_blank" class="button">Github</a>
+    			          <a rel="me" href="https://flickr.com/photos/bolyche/" target="_blank" class="button">Flickr</a>
+    			          <a rel="me" href="https://de.linkedin.com/in/chris-bolychevsky-7783805a" target="_blank" class="button">LinkedIn</a>
+                    <a rel="me" href="https://www.facebook.com/deleresk" target="_blank" class="button">Facebook</a>
+                    <a rel="me" href="http://steamcommunity.com/profiles/76561198031459610/" target="_blank" class="button">Steam</a>
+                    <a rel="me" href="https://www.goodreads.com/user/show/14741184-chris-bolychevsky" target="_blank" class="button">Goodreads</a>
+    		        </ul>
+                </span>
             </nav>
             {{ content }}
         </div>
