--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
     <hr />
     <div class="theme-footer">
         <p class="alignable pull-left" style="display: inline-block">
-            Concocted via <a href="http://jekyllrb.com/" class="different-highlight underline">Jekyll</a> and <a href="http://ankitsultana.me/accent/" class="different-highlight underline">accent</a>, images by @bolyche unless sourced
+            Concocted via <a href="http://jekyllrb.com/" class="different-highlight underline">Jekyll</a>, <a href="https://github.com/bk2dcradle/accent" class="different-highlight underline">accent</a> and bolyche. Images by @bolyche unless sourced
         </p>
     </div>
 </footer>
