--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,7 +2,7 @@
     <div id="intro">
         <div class="container">
             {% if site.profile_picture %}
-                <img id="intro-img" src="{{site.url}}/images/TopPhoto.jpg"> <!change profile pic here!>
+              <!  <img id="intro-img" src="{{site.url}}/images/TopPhoto.jpg" change profile pic here>
             {% endif %}
             <h2>
                 {% if site.site_heading %}
