--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="icon" href="{{ site.baseurl }}/assets/images/fracticalcanopy.png">
+<link rel="icon" href="/assets/images/fracticalcanopy.png">
 
 <title>{{ page.title }} | {{site.name}}</title>
 
