--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -925,7 +925,7 @@ iframe {
       }
     .navbar {
         color: #eee;
-        background: #a5a5a5a8;
+        background: #949494;
     }
     .nav-link {
         color: #eee;
